SOLR-18382: use Stream.toList() instead of collect(Collectors.toList())
Solr is on Java 21; both sites only read the list (size()/get(0)),
so the immutable list from toList() is a safe drop-in.